; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/ipath/extr_ipath_keys.c_ipath_free_lkey.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/ipath/extr_ipath_keys.c_ipath_free_lkey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ipath_lkey_table = type { i32, i32** }

@ib_ipath_lkey_table_size = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ipath_free_lkey(%struct.ipath_lkey_table* %0, i32 %1) #0 {
  %3 = alloca %struct.ipath_lkey_table*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store %struct.ipath_lkey_table* %0, %struct.ipath_lkey_table** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = icmp eq i32 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  br label %29

10:                                               ; preds = %2
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @ib_ipath_lkey_table_size, align 4
  %13 = sub nsw i32 32, %12
  %14 = ashr i32 %11, %13
  store i32 %14, i32* %6, align 4
  %15 = load %struct.ipath_lkey_table*, %struct.ipath_lkey_table** %3, align 8
  %16 = getelementptr inbounds %struct.ipath_lkey_table, %struct.ipath_lkey_table* %15, i32 0, i32 0
  %17 = load i64, i64* %5, align 8
  %18 = call i32 @spin_lock_irqsave(i32* %16, i64 %17)
  %19 = load %struct.ipath_lkey_table*, %struct.ipath_lkey_table** %3, align 8
  %20 = getelementptr inbounds %struct.ipath_lkey_table, %struct.ipath_lkey_table* %19, i32 0, i32 1
  %21 = load i32**, i32*** %20, align 8
  %22 = load i32, i32* %6, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i32*, i32** %21, i64 %23
  store i32* null, i32** %24, align 8
  %25 = load %struct.ipath_lkey_table*, %struct.ipath_lkey_table** %3, align 8
  %26 = getelementptr inbounds %struct.ipath_lkey_table, %struct.ipath_lkey_table* %25, i32 0, i32 0
  %27 = load i64, i64* %5, align 8
  %28 = call i32 @spin_unlock_irqrestore(i32* %26, i64 %27)
  br label %29

29:                                               ; preds = %10, %9
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
